# udptr

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build-linux.sh  build-win.bat
.github/workflows/: test-linux.yml  test-windows.yml
test/: main.cpp
udptr/: adapter.cpp  adapter.hpp  common.cpp  common.hpp  endpoint.cpp  endpoint.hpp  net-include.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
